tests/ui/const-generics/ogca/rhs-but-not-root.stderr
error: generic parameters may not be used in const operations
  --> $DIR/rhs-but-not-root.rs:7:54
   |
LL | type const FOO<const N: usize>: usize = ID::<const { N + 1 }>;
   |                                                      ^

error: aborting due to 1 previous error

